# RoboControl

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 0001_initial_schema.py  1d4229d9e9d6_webhook_log.py  f6725d55e5f3_add_system_config_table.py
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/routers/: alerts.py  health.py  robots.py  system.py  tasks.py  webhook_logs.py  webhooks.py
app/clients/: rcs2000_client.py
app/core/: config.py  constants.py  exceptions.py  logging.py  security.py
app/db/: base.py  init_seed.py  session.py
app/middleware/: request_context.py
app/models/: __init__.py  robot_type.py  system_config.py  task_history.py  webhook_log.py
app/observability/: health.py
app/repositories/: robot_type_repository.py  system_config_repository.py  task_history_repository.py  webhook_log_repository.py
app/schemas/: common.py  robot.py  stats.py  system.py  task.py  webhook.py  webhook_log.py
app/services/: rcs_submit_service.py  robot_service.py  stats_service.py  task_service.py  webhook_service.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: api.js  app.js  components.js
app/utils/: rcs_path.py  redis_helper.py  signing.py
app/workers/: celery_app.py  tasks.py
scripts/: start_local_api.cmd
tests/: conftest.py
tests/integration/: test_health_router.py  test_tasks_router.py
tests/unit/: test_signing.py  test_task_service.py  test_webhook_service.py
