[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rcs-middleware"
version = "0.1.0"
description = "FastAPI middleware bridging RCS-2000 robot controller and customer systems"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "RCS Middleware Team" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "httpx>=0.27,<0.28",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "aiomysql>=0.2.0,<0.3",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "celery>=5.4,<6.0",
    "tenacity>=8.5,<9.0",
    "structlog>=24.1,<25.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-multipart>=0.0.9",
    "opentelemetry-api>=1.25,<2.0",
    "opentelemetry-sdk>=1.25,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
    "anyio>=4.4,<5.0",
    "fakeredis>=2.23,<3.0",
    "aiosqlite>=0.20,<0.21",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "types-redis>=4.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring app fixture",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "PL", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]
"alembic/versions/*.py" = ["N999"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
